2013-06-10  Glenn Morris  <rgm@gnu.org>

	* epa.texi (Cryptographic operations on files): Update epa-decrypt-file.

2013-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Article Date):
	Fix description of gnus-article-update-date-headers.

2013-05-28  Xue Fuqiao  <xfq.free@gmail.com>

	* erc.texi (Special Features): ERC is being maintained within
	Emacs now.

2013-05-25  Xue Fuqiao  <xfq.free@gmail.com>

	* flymake.texi: Changing from one space between sentences to two.

2013-05-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cl.texi (Obsolete Macros): Describe replacements for `flet'
	(bug#14293).

2013-04-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Precise, how to define
	an own ControlPath.

2013-04-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): New item for
	ControlPath settings.

2013-03-31  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi: (Basic Operations on Units): Streamline some
	descriptions.

2013-03-27  Aidan Gauland  <aidalgol@no8wireless.co.nz>

	* eshell.texi (Built-ins): Update manual to mention tramp module.

2013-03-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Filename Syntax): Host names are not allowed to be
	any method name, unless method name is specified explicitly.
	Remove restriction on unibyte filenames.

	* trampver.texi: Update release number.

2013-03-17  Paul Eggert  <eggert@cs.ucla.edu>

	doc: convert some TeX accents to UTF-8
	* emacs-mime.texi (Interface Functions): Use 'ï' rather than
	'@"{@dotless{i}}'.

2013-03-15  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.2.7.

	* trampver.texi: Update release number.

2013-03-09  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Basic Operations on Units): Streamline some
	descriptions.

2013-03-08  Glenn Morris  <rgm@gnu.org>

	* faq.texi (Top): Don't say this was updated @today.
	That's irrelevant and leads to spurious diffs.
