@@ -1,3 +1,10 @@
+2013-06-10  Aidan Gauland  <aidalgol@amuri.net>
+
+	* eshell/em-term.el (eshell-visual-commands)
+	(eshell-visual-subcommands)
+	(eshell-visual-options): Add summary line to docstrings.  Add
+	cross-references.
+
 2013-06-10  Glenn Morris  <rgm@gnu.org>
 
 	* epa.el (epa-read-file-name): New function.  (Bug#14510)
