@@ -1,3 +1,9 @@
+2013-06-10  Aidan Gauland  <aidalgol@amuri.net>
+
+	* eshell.texi (Input/Output): Expand to cover new visual-command
+	options, eshell-visual-subcommands and eshell-visual-options.
+	Divide into separate Visual Commands and Redirection sections.
+
 2013-06-10  Glenn Morris  <rgm@gnu.org>
 
 	* epa.texi (Cryptographic operations on files): Update epa-decrypt-file.
